alphabetical fix and spacing on homepage

--- a/fam-archive-app/src/App.css
+++ b/fam-archive-app/src/App.css
@@ -297,7 +297,7 @@ nav{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 6rem;
+  margin-top: 10rem;
 }
 
 .homepage-text-wrap{
